<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/foodimage"
                android:src="@drawable/load_img"
            />

            <LinearLayout
                android:id="@+id/recipe_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="340dp"
                    android:layout_height="80dp"
                    android:layout_weight="2"
                    android:textColor="@color/dark_brown"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="35sp"
                    android:fontFamily="cursive"
                    android:padding="15dp"
                    />

                <ImageButton
                    android:id="@+id/dowloadBtn"
                    android:layout_width="59dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:contentDescription="@string/downloadbtn"
                    android:src="@drawable/download" />

            </LinearLayout>


            <TextView
                android:id="@+id/cate"
                android:textSize="25sp"
                android:textColor="@color/dark_brown"
                android:background="@color/pinkk"
                android:fontFamily="cursive"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ingredient"
                android:text="@string/ingredients"
                android:fontFamily="cursive"
                android:textSize="25sp"
                android:textColor="@color/dark_brown"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ingreContent"
                android:textSize="20sp"
                android:textColor="@color/red_brown"
                android:background="@color/pinkk"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/instruction"
                android:fontFamily="cursive"
                android:text="@string/instructions"
                android:textSize="25sp"
                android:textColor="@color/dark_brown"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/instrucContent"
                android:textSize="20sp"
                android:textColor="@color/red_brown"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/pinkk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ytHeading"
                android:fontFamily="cursive"
                android:text="@string/watch_youtube_video"
                android:textSize="25sp"
                android:textColor="@color/dark_brown"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ytURL"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:textColor="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
